<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".locationreminders.savereminder.selectreminderlocation.SelectLocationFragment">


    <data>
        <variable
            name="onSaveButtonClicked"
            type="android.view.View.OnClickListener" />


        <variable
            name="viewModel"
            type="com.udacity.project4.locationreminders.savereminder.selectreminderlocation.SelectLocationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fragment_select_location">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragment_container"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:tag="@string/map_fragment" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:contentDescription="@string/save_the_location"
            android:onClick="@{onSaveButtonClicked}"
            android:text="@string/save_the_location"
            android:textColor="@color/design_default_color_on_primary"
            app:backgroundTint="@color/colorPrimary"
            app:icon="@drawable/ic_save"
            app:iconTint="@color/design_default_color_on_primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/radius_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:drawablePadding="10dp"
            android:onClick="@{() -> viewModel.toggleRadiusSelector()}"
            android:text="@string/radius"
            android:textColor="@android:color/white"
            app:backgroundTint="@color/slider_layout_background"
            app:iconTint="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:radiusButtonIcon="@{viewModel.isRadiusSelectorOpen}"
            tools:icon="@drawable/ic_arrow_drop_up"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/radius_slider_layout"
            android:layout_width="36dp"
            android:layout_height="210dp"
            android:layout_marginTop="10dp"
            android:fadeVisible="@{viewModel.isRadiusSelectorOpen}"
            android:padding="10dp"
            app:cardBackgroundColor="@color/slider_layout_background"
            app:cardCornerRadius="32dp"
            app:layout_constraintEnd_toEndOf="@id/radius_button"
            app:layout_constraintStart_toStartOf="@id/radius_button"
            app:layout_constraintTop_toBottomOf="@id/radius_button">

            <com.google.android.material.slider.Slider
                android:id="@+id/radius_slider"
                android:layout_width="200dp"
                android:layout_height="16dp"
                android:layout_gravity="center"
                android:rotation="90"
                android:stepSize="10"
                android:value="@={viewModel.radius}"
                android:valueFrom="100"
                android:valueTo="1000"
                app:labelBehavior="gone"
                app:thumbColor="@color/colorPrimary"
                app:trackColor="@color/colorPrimaryDark"
                tools:value="300" />

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
